metrics-ge/svc-order.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: order
    #version: v1
  name: order
spec:
  ports:
  - port: 8080
    name: order
    #protocol: TCP
    #targetPort: 8080
  selector:
    app: order
    #version: v1
status:
  loadBalancer: {}
